--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="styles/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Music Box Portal">
         <meta name="og:title" content="Music box portal">
         <meta name="og:description" content="Music box portal">
