adaptive design of index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body class="">
     <div class="background-image">
         <div class="holster">
-
             <header class="c-header">
                 <div class="b-site-logo 
                     b-site-logo--d-flex b-site-logo--f-align-center">
@@ -48,33 +47,34 @@
             </header>
         </div>
 
-
-        <div class="b-main-page-access b-main-page-access--flex-center">
-            <div class="b-main-page-access__text 
+        <div class="holster">
+            <div class="b-main-page-access b-main-page-access--flex-center">
+                <div class="b-main-page-access__text 
                         b-main-page-access__text--center-uppercase">
-                <h1 class="b-main-page-access__text--xxl">
-                    Онлайн музыка где угодно
-                </h1>
-                <h3>без ограничений</h3>
-            </div>
-            <p>
-                Получите доступ всего за несколько шагов.
-                Заполните форму ниже и откройте мир музыки
-            </p>
+                    <h1 class="b-main-page-access__text--xxl">
+                        Онлайн музыка где угодно
+                    </h1>
+                    <h3>без ограничений</h3>
+                </div>
+                <p>
+                    Получите доступ всего за несколько шагов.
+                    Заполните форму ниже и откройте мир музыки
+                </p>
 
-            <form class="b-main-page-acces-form
+                <form class="b-main-page-acces-form
                         b-main-page-acces-form--flex-two-column" method="get">
-                <input class="b-main-page-acces-form__name
+                    <input class="b-main-page-acces-form__name
                             b-main-page-acces-form__name--inputs" type="text" id="fname" name="fname"
-                    placeholder="Имя">
-                <input class="b-main-page-acces-form__email
+                        placeholder="Имя">
+                    <input class="b-main-page-acces-form__email
                             b-main-page-acces-form__email--inputs" type="text" id="email" name="email"
-                    placeholder="Email">
-                <button class="b-main-page-acces-form__button
+                        placeholder="Email">
+                    <button class="b-main-page-acces-form__button
                             b-main-page-acces-form__button--form-button">
-                    получить доступ
-                </button>
-            </form>
+                        получить доступ
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
     </div>
@@ -104,8 +104,8 @@
                             доступ ко всей коллекции музыки.
                             Присутствует реклама
                         </p>
-
                     </li>
+
                     <li class="b-subscribe__standart
                         b-subscribe__standart--card">
                         <p>Стандартная</p>
@@ -119,6 +119,7 @@
                             доступ ко всей коллекции музыки в среднем качестве
                         </p>
                     </li>
+                    
                     <li class="b-subscribe__premium
                         b-subscribe__premium--card">
                         <p>Премиум</p>
@@ -147,16 +148,17 @@
         <div class="holster holster--margin-top-100">
             <section class="b-news">
                 <h2 class="b-news__header b-news__header--text-uppercase-center">
-                    Последние новости
+                    Последние&nbsp;новости
                 </h2>
                 <article class="c-news c-news--flex-two-columns">
                     <div class="b-eminem b-eminem__img b-eminem__img--width45">
-                        <img src="images\Music to Be Murdered By.png">
+                        <img src="images\Music to Be Murdered By.png" 
+                        alt="eminem photo">
                     </div>
                     <div class="c-news c-news--width45-flex-column">
                         <h2 class="b-eminem__prewiew">Music to Be Murdered By</h2>
                         <p class="b-eminem__main-text c-news--text-color-secondary">
-                            Новый альбом Eminem «Music to Be Murdered By»
+                            Новый альбом Eminem «Music&nbsp;to&nbsp;Be Murdered&nbsp;By»
                             уже доступен в нашем сервисе.
                             На альбоме вас ждёт 20 новых треков.
                         </p>
@@ -166,7 +168,7 @@
                             </div>
                             <div class="b-news-releas-data__music-box
                         b-news-releas-data__music-box--yellow-uppercase">
-                                <p>Music box</p>
+                                <p>Music&nbsp;box</p>
                             </div>
                             <span> | </span>
                             <div class="b-news-releas-data
@@ -180,9 +182,10 @@
                         </a>
                     </div>
                 </article>
-                <article class="c-news c-news--flex-two-columns">
+                <article class="c-news c-news--flex-two-columns
+                c-news--flex-two-columns-osborn">
                     <div class="c-news c-news--width45-flex-column">
-                        <h2 class="b-osborn__prewiew">Ordinary Man</h2>
+                        <h2 class="b-osborn__prewiew">Ordinary&nbsp;Man</h2>
                         <p class="b-osborn__main-text c-news--text-color-secondary">
                             Легенда рока Оззи Озборн спустя 10 лет выпустил
                             новый альбом Ordinary Man.
@@ -194,7 +197,7 @@
                             </div>
                             <div class="b-news-releas-data__music-box
                         b-news-releas-data__music-box--yellow-uppercase">
-                                <p>Music box</p>
+                                <p>Music&nbsp;box</p>
                             </div>
                             <span> | </span>
                             <div class="b-news-releas-data__release-date-ordinary-man
@@ -207,7 +210,7 @@
                             К альбому
                         </a>
                     </div>
-                    <div class="b-eminem__img">
+                    <div class="b-osborn__img">
                         <img src="images\Ordinary Man.png">
                     </div>
                 </article>
@@ -307,8 +310,7 @@
                         </a>
                     </li>
                     <li class="b-contacts__item">
-                        <a href="mailto:hello@music.box" 
-                        class="b-about__item--text-no-decoration-text-secondary">
+                        <a href="mailto:hello@music.box" class="b-about__item--text-no-decoration-text-secondary">
                             hello@music.box
                         </a>
                     </li>
@@ -359,33 +361,33 @@
             <ul class="b-footer-navigation b-footer-navigation--flex">
                 <li class="b-support__item">
                     <a href="#" class="b-support__item--link">
+                        Магазин
+                    </a>
+                </li>
+                <li class="b-support__item">
+                    <a href="#" class="b-support__item--link">
+                        Обслуживание
+                    </a>
+                </li>
+                <li class="b-support__item">
+                    <a href="#" class="b-support__item--link">
+                        Блог
+                    </a>
+                </li>
+                <li class="b-support__item">
+                    <a href="#" class="b-support__item--link">
                         Потдержка
                     </a>
                 </li>
                 <li class="b-support__item">
                     <a href="#" class="b-support__item--link">
-                        База заний
-                    </a>
-                </li>
-                <li class="b-support__item">
-                    <a href="#" class="b-support__item--link">
-                        Тарифы
-                    </a>
-                </li>
-                <li class="b-support__item">
-                    <a href="#" class="b-support__item--link">
-                        Мобильное приложение
-                    </a>
-                </li>
-                <li class="b-support__item">
-                    <a href="#" class="b-support__item--link">
-                        Использование
+                        Контакты
                     </a>
                 </li>
             </ul>
         </div>
     </footer>
-    
+
 </body>
 
 </html>
