--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <nav class="b-site-navigation b-site-navigation--moveable">
                         <ul class="b-site-navigation--adaptive-container">
                             <li>
-                                <a class="b-site-navigation--main-link" href="#">
+                                <a class="b-site-navigation--main-link" href="index.html">
                                     Главная
                                 </a>
                             </li>
