--- a/catalog.html
+++ b/catalog.html
@@ -14,61 +14,63 @@
 
 <body>
     <div class="bg-layout-cover-norepeat-position-center bg-morten-harket">
-        <header class="wrapper">
-            <header class="header-container f-content-sb">
-                <div class="site-logo-container site-logo-order display-flex f-content-sb f-align-center">
-                    <img class="h-20-17" src=".\images\logo.svg" alt="логотип сайта">
-                    <p class="fsz11 txt-up">Music&nbsp;box</p>
-                </div>
-                <nav class="site-navigation-order">
-                    <ul class="site-navigation-container display-flex list-style-none fsz11 txt-up">
-                        <li>
-                            <a class="site-navigation-link txt-decor-none" href="index.html">
-                                Главная
-                            </a>
-                        </li>
-                        <li>
-                            <a class="site-navigation-link txt-decor-none" href="#">
-                                Каталог
-                            </a>
-                        </li>
-                        <li>
-                            <a class="site-navigation-link txt-decor-none" href="/catalog.html">
-                                Исполнители
-                            </a>
-                        </li>
-                        <li>
-                            <a class="site-navigation-link txt-decor-none" href="#">
-                                Контакты
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="search-form-container search-form-order">
-                    <input class="search-input-styles" placeholder="поиск..." type="search">
-                </div>
-            </header>
 
-            <div class="wrapper pt100 pb100">
-                <div class="musician-container display-flex f-direction-column">
-                    <div>
-                        <h1 class="fsz-30-60 txt-up">Morten Harket</h1>
-                        <p class="fsz-14-18">24 875 поклонников</p>
-                    </div>
-                    <div class="musian-buttons-container display-flex mt40">
-                        <div class="musian-button display-flex f-align-center clr-btn-mix">
-                            <img class="ml15 h-20-16" src="images/play-button.svg" alt="play button sign">
-                            <p class="ml15 txt-up">Микс</p>
-                        </div>
-                        <div class="musian-button display-flex f-align-center clr-btn-select">
-                            <img class="ml15 h-20-16" src="images/heart.svg" alt="select button sign" height="17">
-                            <p class="ml15 txt-up">В&nbsp;избранное</p>
-                        </div>
-                    </div>
+        <header class="wrapper header-container f-content-sb">
+            <div class="site-logo-container site-logo-order display-flex f-content-sb f-align-center">
+                <img class="h-20-17" src=".\images\logo.svg" alt="логотип сайта">
+                <p class="fsz11 txt-up">Music&nbsp;box</p>
+            </div>
+            <nav class="site-navigation-order">
+                <ul class="site-navigation-container display-flex list-style-none fsz11 txt-up">
+                    <li>
+                        <a class="site-navigation-link txt-decor-none" href="index.html">
+                            Главная
+                        </a>
+                    </li>
+                    <li>
+                        <a class="site-navigation-link txt-decor-none" href="#">
+                            Каталог
+                        </a>
+                    </li>
+                    <li>
+                        <a class="site-navigation-link txt-decor-none" href="/catalog.html">
+                            Исполнители
+                        </a>
+                    </li>
+                    <li>
+                        <a class="site-navigation-link txt-decor-none" href="#">
+                            Контакты
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="search-form-container search-form-order">
+                <input class="search-input-styles" placeholder="поиск..." type="search">
+            </div>
+        </header>
+
+        <div class="wrapper pt100 pb100">
+            <div class="musician-container display-flex f-direction-column p-m-0">
+                <div>
+                    <h1 class="fsz-30-60 txt-up">Morten Harket</h1>
+                    <p class="fsz-14-18">24 875 поклонников</p>
+                </div>
+                <div class="musian-buttons-container display-flex mt40">
+                    <a href="#"
+                        class="musian-button display-flex f-align-center clr-btn-mix txt-decor-none color-white">
+                        <img class="ml15 h-20-16" src="images/play-button.svg" alt="play button sign">
+                        <p class="ml15 txt-up">Микс</p>
+                    </a>
+                    <a href="#"
+                        class="musian-button display-flex f-align-center clr-btn-select txt-decor-none color-white">
+                        <img class="ml15 h-20-16" src="images/heart.svg" alt="select button sign" height="17">
+                        <p class="ml15 txt-up">В&nbsp;избранное</p>
+                    </a>
                 </div>
             </div>
+        </div>
     </div>
-    </div>
+
 
     <main>
 
@@ -82,7 +84,7 @@
                     <li class="fsz14 mb25 popular-tracks-sec display-flex f-content-sb f-align-center">
                         <a href="#" class="display-flex f-content-start f-align-center txt-decor-none">
                             <div class="mr15 h-50-55">
-                                <img class="img-fit" src="images/Wild Seed.png" alt="Wild seed album avatar">
+                                <img class="img-fit" src="images/Wild_Seed.png" alt="Wild seed album avatar">
                             </div>
                             <p class="color-white">Spanish Steps<br>
                                 <span class="color-grey fsz12">Morten Harket</span>
@@ -95,7 +97,7 @@
                     <li class="fsz14 mb25 popular-tracks-sec display-flex f-content-sb f-align-center">
                         <a href="#" class="display-flex f-content-start f-align-center txt-decor-none">
                             <div class="mr15 h-50-55">
-                                <img class="img-fit" src="images/Brother.png" alt="Wild seed album avatar">
+                                <img class="img-fit" src="images/Brother.png" alt="Brother album avatar">
                             </div>
                             <p class="color-white">Brother<br>
                                 <span class="color-grey fsz12">Morten Harket</span>
@@ -108,8 +110,8 @@
                     <li class="fsz14 mb25 popular-tracks-sec display-flex f-content-sb f-align-center">
                         <a href="#" class="display-flex f-content-start f-align-center txt-decor-none">
                             <div class="c-b-popular-tracks__sec--img">
-                                <img class="mr15 h-50-55" src="images/Letter from Egypt.png"
-                                    alt="Wild seed album avatar">
+                                <img class="mr15 h-50-55" src="images/Letter_from_Egypt.png"
+                                    alt="Letter from Egypt album avatar">
                             </div>
                             <p class="color-white">Darkspace<br>
                                 <span class="color-grey fsz12">Morten Harket</span>
@@ -126,7 +128,7 @@
                     <li class="fsz14 mb25 popular-tracks-sec display-flex f-content-sb f-align-center">
                         <a href="#" class="display-flex f-content-start f-align-center txt-decor-none">
                             <div class="c-b-popular-tracks__sec--img">
-                                <img class="mr15 h-50-55" src="images/Letter from Egypt.png"
+                                <img class="mr15 h-50-55" src="images/Letter_from_Egypt.png"
                                     alt="Letter from Egypt album avatar">
                             </div>
                             <p class="color-white">With You - With Me<br>
@@ -140,7 +142,7 @@
                     <li class="fsz14 mb25 popular-tracks-sec display-flex f-content-sb f-align-center">
                         <a href="#" class="display-flex f-content-start f-align-center txt-decor-none">
                             <div class="c-b-popular-tracks__sec--img">
-                                <img class="mr15 h-50-55" src="images/Wild Seed.png" alt="Wild seed album avatar">
+                                <img class="mr15 h-50-55" src="images/Wild_Seed.png" alt="Wild seed album avatar">
                             </div>
                             <p class="color-white">Brodsky Tune<br>
                                 <span class="color-grey fsz12">Morten Harket</span>
@@ -153,7 +155,7 @@
                     <li class="fsz14 mb25 popular-tracks-sec display-flex f-content-sb f-align-center">
                         <a href="#" class="display-flex f-content-start f-align-center txt-decor-none">
                             <div class="c-b-popular-tracks__sec--img">
-                                <img class="mr15 h-50-55" src="images/Out of My Hands.png"
+                                <img class="mr15 h-50-55" src="images/Out_of_My_Hands.png"
                                     alt="Out of My Hands album avatar">
                             </div>
                             <p class="color-white">Burn Money Burn<br>
@@ -277,8 +279,8 @@
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 A-ha</b><br>
                             417&nbsp;086&nbsp;поклонников
                         </p>
@@ -289,12 +291,12 @@
                 <li class="similiar-artists-styles display-flex f-direction-column f-align-center pb50">
 
                     <a href="#" class="artists-avatar-styles">
-                        <img src="images/Tears for Fears.png" alt="A-ha avatar">
+                        <img src="images/Tears_for_Fears.png" alt="tears for fears avatar">
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 Tears for Fears</b><br>
                             434&nbsp;086&nbsp;поклонников
                         </p>
@@ -305,12 +307,12 @@
                 <li class="similiar-artists-styles display-flex f-direction-column f-align-center pb50">
 
                     <a href="#" class="artists-avatar-styles">
-                        <img src="images/Duran Duran.png" alt="A-ha avatar">
+                        <img src="images/Duran_Duran.png" alt="Duran Duran avatar">
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 Duran Duran</b><br>
                             631&nbsp;071&nbsp;поклонников
                         </p>
@@ -321,12 +323,12 @@
                 <li class="similiar-artists-styles display-flex f-direction-column f-align-center pb50">
 
                     <a href="#" class="artists-avatar-styles">
-                        <img src="images/Jack Savoretti.png" alt="A-ha avatar">
+                        <img src="images/Jack_Savoretti.png" alt="Jack Savoretti avatar">
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 Jack Savoretti</b><br>
                             26&nbsp;857&nbsp;поклонников
                         </p>
@@ -337,12 +339,12 @@
                 <li class="similiar-artists-styles display-flex f-direction-column f-align-center pb50">
 
                     <a href="#" class="artists-avatar-styles">
-                        <img src="images/Keane.png" alt="A-ha avatar">
+                        <img src="images/Keane.png" alt="Keane avatar">
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 Keane</b><br>
                             1&nbsp;704&nbsp;358&nbsp;поклонников
                         </p>
@@ -353,12 +355,12 @@
                 <li class="similiar-artists-styles display-flex f-direction-column f-align-center pb50">
 
                     <a href="#" class="artists-avatar-styles">
-                        <img src="images/Frank Sinatra.png" alt="A-ha avatar">
+                        <img src="images/Frank_Sinatra.png" alt="Frank Sintra avatar">
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 Frank Sinatra</b><br>
                             1&nbsp;653&nbsp;882&nbsp;поклонников
                         </p>
@@ -369,12 +371,12 @@
                 <li class="similiar-artists-styles display-flex f-direction-column f-align-center pb50">
 
                     <a href="#" class="artists-avatar-styles">
-                        <img src="images/Paul Young.png" alt="A-ha avatar">
+                        <img src="images/Paul_Young.png" alt="Paul Young avatar">
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 Paul Young</b><br>
                             50&nbsp;329&nbsp;поклонников
                         </p>
@@ -385,12 +387,12 @@
                 <li class="similiar-artists-styles display-flex f-direction-column f-align-center pb50">
 
                     <a href="#" class="artists-avatar-styles">
-                        <img src="images/Chris Rea.png" alt="A-ha avatar">
+                        <img src="images/Chris_Rea.png" alt="Cris rea avatar">
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p>
-                            <b class="fsz-16-20">
+                        <p class="fsz-12-18">
+                            <b>
                                 Chris Rea</b><br>
                             73&nbsp;351&nbsp;поклонников
                         </p>
