--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 
 <head>
-
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
     <meta name="og:description" content="Music box portal">
     <meta name="yandex-verification" content="c50ea8ea09b5d4dc" />
     <title>Portal "Music Box" wilhelm</title>
-
 </head>
 
 <body>
@@ -54,7 +52,6 @@
 
         <div class="wrapper pt100 pb100 main-page-access-container display-flex f-direction-column f-align-center">
 
-
             <h1 class="fsz-30-60 txt-up txt-center p-m-0">
                 Онлайн музыка где угодно
             </h1>
@@ -90,7 +87,8 @@
 
                 <li class="card-container mb50 display-flex f-direction-column f-align-center bg-free">
                     <p class="fsz-16-24">Бесплатная</p>
-                    <div class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
+                    <div
+                        class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
                         <p class="fsz60 p-m-0">0
                             <sup class="fsz30">руб.</sup>
                         </p>
@@ -105,7 +103,8 @@
 
                 <li class="card-container mb50 display-flex f-direction-column f-align-center bg-standart">
                     <p class="fsz-16-24">Стандартная</p>
-                    <div class="display-flex f-align-center f-direction-column f-content-sb subsribe-description-holster">
+                    <div
+                        class="display-flex f-align-center f-direction-column f-content-sb subsribe-description-holster">
                         <p class="fsz60 p-m-0">250
                             <sup class="fsz30">руб.</sup>
                         </p>
@@ -119,7 +118,8 @@
 
                 <li class="card-container mb50 display-flex f-direction-column f-align-center bg-premium">
                     <p class="fsz-16-24">Премиум</p>
-                    <div class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
+                    <div
+                        class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
                         <p class="fsz60 p-m-0">500
                             <sup class="fsz30">руб.</sup>
                         </p>
@@ -141,96 +141,96 @@
 
         </section>
 
-            <section class="wrapper">
-                <h2 class="fsz-20-29-38 txt-up txt-center mb50">
-                    Последние новости
-                </h2>
+        <section class="wrapper">
+            <h2 class="fsz-20-29-38 txt-up txt-center mb50">
+                Последние новости
+            </h2>
 
-                <article class="display-flex f-content-sb news-aricle-container">
+            <article class="display-flex f-content-sb news-aricle-container">
 
-                    <div>
-                        <img class="img-fit" src="images/Music_to_Be_Murdered_By.png" alt="Eminem album cover photo">
-                    </div>
-
-                    <div class="news-txt-container display-flex f-direction-column">
-                        <h2 class="fsz30">Music to Be Murdered By</h2>
-                        <p class="fsz14 text-color-secondary lh200">
-                            Новый альбом Eminem «Music&nbsp;to&nbsp;Be Murdered&nbsp;By»
-                            уже доступен в нашем сервисе.
-                            На альбоме вас ждёт 20 новых треков.
-                        </p>
-                        <div class="releas-data-container display-flex f-content-sb f-align-center">
-                            <div>
-                                <img class="h25-19" src="images\avatar.png" height="19">
-                            </div>
-                            <div class="txt-up color-yellow">
-                                <p>Music&nbsp;box</p>
-                            </div>
-                            <span> | </span>
-                            <div class="text-grey">
-                                <p>17/01/2020</p>
-                            </div>
-                        </div>
-                        <a href="#" class="news-button txt-up txt-decor-none txt-center">
-                            К альбому
-                        </a>
-                    </div>
-                </article>
-
-                <article class="display-flex f-content-sb news-aricle-container osborn-order">
-
-                    <div class="news-txt-container display-flex f-direction-column">
-                        <h2 class="fsz30">Ordinary&nbsp;Man</h2>
-                        <p class="fsz14 text-color-secondary lh200">
-                            Легенда рока Оззи Озборн спустя 10 лет выпустил
-                            новый альбом Ordinary Man.
-                            Слушайте в числе первых на Music Box
-                        </p>
-                        <div class="releas-data-container display-flex f-content-sb f-align-center">
-                            <div>
-                                <img class="h25-19" src="images\avatar.png">
-                            </div>
-                            <div class="txt-up color-yellow">
-                                <p>Music&nbsp;box</p>
-                            </div>
-                            <span> | </span>
-                            <div class="text-grey">
-                                <p>24/02/2020</p>
-                            </div>
-                        </div>
-                        <a href="#" class="news-button txt-up txt-decor-none txt-center">
-                            К альбому
-                        </a>
-                    </div>
-                    <div>
-                        <img class="img-fit" src="images\Ordinary_Man.png" alt="Osborn album cover">
-                    </div>
-                </article>
-            </section>
-        
-            <section class="wrapper pt100 pb100 b-mobile-application">
-                <h2 class="fsz-20-29-38 txt-up txt-center mb50">
-                    Мобильное приложение
-                </h2>
-                <div class="display-flex f-align-center mobile-application-container">
-                    <div class="mobile-application-text-container">
-                        <p>Воспользуйтесь нашим мобильным приложением.
-                            Оно позволит слушать музыку с любого устройства
-                            на базе операционных систем Androind и iOS
-                        </p>
-                        <p>
-                            С тарифом «Премиум» приложение позволяет скачивать
-                            все композиции из нашей коллекции.
-                            Вы можете слушать музыку даже без интернета.
-                        </p>
-                        <button class="mobile-application-button">Скачать</button>
-                    </div>
-
-                    <div class="mobile-application-img-container">
-                        <img src="images\iphone.png" alt="mobile phones photo">
-                    </div>
+                <div>
+                    <img class="img-fit" src="images/Music_to_Be_Murdered_By.png" alt="Eminem album cover photo">
                 </div>
-            </section>
+
+                <div class="news-txt-container display-flex f-direction-column">
+                    <h2 class="fsz30">Music to Be Murdered By</h2>
+                    <p class="fsz14 text-color-secondary lh200">
+                        Новый альбом Eminem «Music&nbsp;to&nbsp;Be Murdered&nbsp;By»
+                        уже доступен в нашем сервисе.
+                        На альбоме вас ждёт 20 новых треков.
+                    </p>
+                    <div class="releas-data-container display-flex f-content-sb f-align-center">
+                        <div>
+                            <img class="h25-19" src="images\avatar.png" height="19">
+                        </div>
+                        <div class="txt-up color-yellow">
+                            <p>Music&nbsp;box</p>
+                        </div>
+                        <span> | </span>
+                        <div class="text-grey">
+                            <p>17/01/2020</p>
+                        </div>
+                    </div>
+                    <a href="#" class="news-button txt-up txt-decor-none txt-center">
+                        К альбому
+                    </a>
+                </div>
+            </article>
+
+            <article class="display-flex f-content-sb news-aricle-container osborn-order">
+
+                <div class="news-txt-container display-flex f-direction-column">
+                    <h2 class="fsz30">Ordinary&nbsp;Man</h2>
+                    <p class="fsz14 text-color-secondary lh200">
+                        Легенда рока Оззи Озборн спустя 10 лет выпустил
+                        новый альбом Ordinary Man.
+                        Слушайте в числе первых на Music Box
+                    </p>
+                    <div class="releas-data-container display-flex f-content-sb f-align-center">
+                        <div>
+                            <img class="h25-19" src="images\avatar.png">
+                        </div>
+                        <div class="txt-up color-yellow">
+                            <p>Music&nbsp;box</p>
+                        </div>
+                        <span> | </span>
+                        <div class="text-grey">
+                            <p>24/02/2020</p>
+                        </div>
+                    </div>
+                    <a href="#" class="news-button txt-up txt-decor-none txt-center">
+                        К альбому
+                    </a>
+                </div>
+                <div>
+                    <img class="img-fit" src="images\Ordinary_Man.png" alt="Osborn album cover">
+                </div>
+            </article>
+        </section>
+
+        <section class="wrapper pt100 pb100">
+            <h2 class="fsz-20-29-38 txt-up txt-center mb50">
+                Мобильное приложение
+            </h2>
+            <div class="display-flex f-align-center mobile-application-container">
+                <div class="mobile-application-text-container">
+                    <p>Воспользуйтесь нашим мобильным приложением.
+                        Оно позволит слушать музыку с любого устройства
+                        на базе операционных систем Androind и iOS
+                    </p>
+                    <p>
+                        С тарифом «Премиум» приложение позволяет скачивать
+                        все композиции из нашей коллекции.
+                        Вы можете слушать музыку даже без интернета.
+                    </p>
+                    <button class="mobile-application-button">Скачать</button>
+                </div>
+
+                <div class="m-auto">
+                    <img class="img-fit" src="images\iphone.png" alt="mobile phones photo">
+                </div>
+            </div>
+        </section>
 
     </main>
 
