header-footer more space album-btn white

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
 <body>
     <div class="bg-layout-cover-norepeat-position-center bg-morten-harket">
 
-        <header class="wrapper header-container f-content-sb">
+        <header class="wrapper header-container f-content-sb pt25">
             <div class="site-logo-container site-logo-order display-flex f-content-sb f-align-center">
                 <img class="h-20-17" src=".\images\logo.svg" alt="логотип сайта">
                 <p class="fsz11 txt-up">Music&nbsp;box</p>
@@ -252,7 +252,7 @@
 
                 <li class="fsz-16-20 diskography-album-container display-flex f-direction-column">
                     <a class="txt-decor-none color-white" href="#">
-                        <div class="album-container album-container album album-poetenes-evangelium-album">
+                        <div class="album-container display-flex album album-poetenes-evangelium-album">
                             <img class="button-albums" src="images/play-button.svg" alt="play button sign">
                         </div>
 
@@ -391,7 +391,7 @@
                     </a>
 
                     <a href="#" class="color-white txt-center txt-decor-none">
-                        <p class="fsz-12-18">
+                        <p class="fsz-14-20">
                             <b>
                                 Chris Rea</b><br>
                             73&nbsp;351&nbsp;поклонников
