--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Music Box Portal">
@@ -15,7 +16,7 @@
 <body>
     <div class="bg-layout-cover-norepeat-position-center bg-main-page">
 
-        <header class="wrapper header-container f-content-sb">
+        <header class="wrapper header-container f-content-sb pt25">
             <div class="site-logo-container site-logo-order display-flex f-content-sb f-align-center">
                 <img class="h-20-17" src=".\images\logo.svg" alt="логотип сайта">
                 <p class="fsz11 txt-up">Music&nbsp;box</p>
@@ -50,7 +51,7 @@
         </header>
 
 
-        <div class="wrapper pt100 pb100 main-page-access-container display-flex f-direction-column f-align-center">
+        <div class="wrapper main-page-access-container display-flex f-direction-column f-align-center">
 
             <h1 class="fsz-30-60 txt-up txt-center p-m-0">
                 Онлайн музыка где угодно
@@ -64,7 +65,7 @@
             </p>
 
 
-            <form class="b-main-page-acces-form-container" method="get">
+            <form class="b-main-page-acces-form-container display-flex f-content-sb" method="get">
                 <input class="main-page-acces-inputs" type="text" id="fname" name="fname" placeholder="Имя">
                 <input class="main-page-acces-inputs" type="text" id="email" name="email" placeholder="Email">
                 <button class="main-page-acces-form-button">
@@ -171,8 +172,8 @@
                             <p>17/01/2020</p>
                         </div>
                     </div>
-                    <a href="#" class="news-button txt-up txt-decor-none txt-center">
-                        К альбому
+                    <a href="#" class="news-button txt-up txt-decor-none display-flex f-align-center">
+                       К альбому 
                     </a>
                 </div>
             </article>
@@ -198,11 +199,11 @@
                             <p>24/02/2020</p>
                         </div>
                     </div>
-                    <a href="#" class="news-button txt-up txt-decor-none txt-center">
+                    <a href="#" class="news-button txt-up txt-decor-none display-flex f-align-center">
                         К альбому
                     </a>
                 </div>
-                <div>
+                <div class="news-img-container">
                     <img class="img-fit" src="images\Ordinary_Man.png" alt="Osborn album cover">
                 </div>
             </article>
