--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Music Box Portal">
     <meta name="og:title" content="Music box portal">
     <meta name="og:description" content="Music box portal">
-    <meta name="yandex-verification" content="c50ea8ea09b5d4dc" />
+    <meta name="yandex-verification" content="10a6933f9def15ba" />
     <title>Portal "Music Box" wilhelm</title>
 </head>
 
 <body>
     <div class="bg-layout-cover-norepeat-position-center bg-main-page">
 
-        <header class="wrapper header-container f-content-sb pt25">
-            <div class="site-logo-container site-logo-order display-flex f-content-sb f-align-center">
-                <img class="h-20-17" src=".\images\logo.svg" alt="логотип сайта">
+        <header class="wrapper header-container display-flex justify-content-between pt25">
+            <div class="site-logo-container site-logo-order display-flex justify-content-between f-align-center">
+                <img class="h-mob20-desk17" src=".\images\logo.svg" alt="логотип сайта">
                 <p class="fsz11 txt-up">Music&nbsp;box</p>
             </div>
             <nav class="site-navigation-order">
@@ -45,199 +45,195 @@
                     </li>
                 </ul>
             </nav>
-            <div class="search-form-container search-form-order">
+            <div class="searcform-container search-form-order">
                 <input class="search-input-styles" placeholder="поиск..." type="search">
             </div>
         </header>
 
+        <main>
 
-        <div class="wrapper main-page-access-container display-flex f-direction-column f-align-center">
+            <div class="wrapper main-page-access-container display-flex f-direction-column f-align-center">
 
-            <h1 class="fsz-30-60 txt-up txt-center p-m-0">
-                Онлайн музыка где угодно
-            </h1>
+                <h1 class="fsz-30-60 txt-up txt-center p-m-0">
+                    Онлайн музыка где угодно
+                </h1>
 
-            <h2 class="fsz-18-30 txt-up txt-center">без ограничений</h2>
+                <h2 class="fsz-18-30 txt-up txt-center">без ограничений</h2>
 
-            <p class="fsz-12-18 txt-center">
-                Получите доступ всего за несколько шагов.
-                Заполните форму ниже и откройте мир музыки
-            </p>
+                <p class="fsz-12-18 txt-center">
+                    Получите доступ всего за несколько шагов.
+                    Заполните форму ниже и откройте мир музыки
+                </p>
 
 
-            <form class="b-main-page-acces-form-container display-flex f-content-sb" method="get">
-                <input class="main-page-acces-inputs" type="text" id="fname" name="fname" placeholder="Имя">
-                <input class="main-page-acces-inputs" type="text" id="email" name="email" placeholder="Email">
-                <button class="main-page-acces-form-button">
-                    получить доступ
-                </button>
-            </form>
+                <form class="b-main-page-acces-form-container display-flex justify-content-between" method="get">
+                    <input class="main-page-acces-inputs" type="text" id="fname" name="fname" placeholder="Имя">
+                    <input class="main-page-acces-inputs" type="text" id="email" name="email" placeholder="Email">
+                    <button class="main-page-acces-form-button txt-up">
+                        Получить доступ
+                    </button>
+                </form>
 
-        </div>
+            </div>
 
     </div>
 
-    <main>
+    <section class="wrapper mt100">
+        <h2 class="fsz-20-29-38 txt-up txt-center mb50">
+            Формы подписки
+        </h2>
 
-        <section class="wrapper pt100 pb100">
-            <h2 class="fsz-20-29-38 txt-up txt-center mb50">
-                Формы подписки
-            </h2>
+        <ul class="subscribe-cards-container display-flex list-style-none txt-up">
 
-            <ul class="subscribe-cards-container display-flex list-style-none txt-up">
-
-                <li class="card-container mb50 display-flex f-direction-column f-align-center bg-free">
-                    <p class="fsz-16-24">Бесплатная</p>
-                    <div
-                        class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
-                        <p class="fsz60 p-m-0">0
-                            <sup class="fsz30">руб.</sup>
-                        </p>
-                        <a class="subscribe-btn fsz-12-24 txt-up txt-center txt-decor-none" href="#">Оформить</a>
-                        <p class="fsz11 txt-center txt-low">
-                            Оплата в месяц. Бесплатный тариф предоставляет
-                            доступ ко всей коллекции музыки.
-                            Присутствует реклама
-                        </p>
-                    </div>
-                </li>
-
-                <li class="card-container mb50 display-flex f-direction-column f-align-center bg-standart">
-                    <p class="fsz-16-24">Стандартная</p>
-                    <div
-                        class="display-flex f-align-center f-direction-column f-content-sb subsribe-description-holster">
-                        <p class="fsz60 p-m-0">250
-                            <sup class="fsz30">руб.</sup>
-                        </p>
-                        <a class="subscribe-btn fsz-12-24 txt-up txt-center txt-decor-none" href="#">Оформить</a>
-                        <p class="fsz11 txt-center txt-low">
-                            Оплата в месяц. Стандартный тариф предоставляет
-                            доступ ко всей коллекции музыки в среднем качестве
-                        </p>
-                    </div>
-                </li>
-
-                <li class="card-container mb50 display-flex f-direction-column f-align-center bg-premium">
-                    <p class="fsz-16-24">Премиум</p>
-                    <div
-                        class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
-                        <p class="fsz60 p-m-0">500
-                            <sup class="fsz30">руб.</sup>
-                        </p>
-                        <a class="subscribe-btn fsz-12-24 txt-up txt-center txt-decor-none" href="#">Оформить</a>
-                        <p class="fsz11 txt-center txt-low">
-                            Оплата в месяц. Премиум тариф предоставляет
-                            доступ ко всей коллекции музыки в высоком качестве
-                        </p>
-                    </div>
-                </li>
-            </ul>
-
-            <p class="fsz-12-22 txt-center">
-                На всех тарифах возможно прослушивание музыки
-                с мобильных устройств. На премиум тарифе
-                вы можете скачать все композиции на ваше устройство
-                и слушать музыку без подключения к интернету
-            </p>
-
-        </section>
-
-        <section class="wrapper">
-            <h2 class="fsz-20-29-38 txt-up txt-center mb50">
-                Последние новости
-            </h2>
-
-            <article class="display-flex f-content-sb news-aricle-container">
-
-                <div>
-                    <img class="img-fit" src="images/Music_to_Be_Murdered_By.png" alt="Eminem album cover photo">
-                </div>
-
-                <div class="news-txt-container display-flex f-direction-column">
-                    <h2 class="fsz30">Music to Be Murdered By</h2>
-                    <p class="fsz14 text-color-secondary lh200">
-                        Новый альбом Eminem «Music&nbsp;to&nbsp;Be Murdered&nbsp;By»
-                        уже доступен в нашем сервисе.
-                        На альбоме вас ждёт 20 новых треков.
+            <li class="card-container mb50 display-flex f-direction-column f-align-center bg-free">
+                <p class="fsz-16-24">Бесплатная</p>
+                <div class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
+                    <p class="fsz60 p-m-0">0
+                        <sup class="fsz30">руб.</sup>
                     </p>
-                    <div class="releas-data-container display-flex f-content-sb f-align-center">
-                        <div>
-                            <img class="h25-19" src="images\avatar.png" height="19">
-                        </div>
-                        <div class="txt-up color-yellow">
-                            <p>Music&nbsp;box</p>
-                        </div>
-                        <span> | </span>
-                        <div class="text-grey">
-                            <p>17/01/2020</p>
-                        </div>
-                    </div>
-                    <a href="#" class="news-button txt-up txt-decor-none display-flex f-align-center">
-                       К альбому 
-                    </a>
-                </div>
-            </article>
-
-            <article class="display-flex f-content-sb news-aricle-container osborn-order">
-
-                <div class="news-txt-container display-flex f-direction-column">
-                    <h2 class="fsz30">Ordinary&nbsp;Man</h2>
-                    <p class="fsz14 text-color-secondary lh200">
-                        Легенда рока Оззи Озборн спустя 10 лет выпустил
-                        новый альбом Ordinary Man.
-                        Слушайте в числе первых на Music Box
+                    <a class="subscribe-btn fsz-12-24 txt-up txt-center txt-decor-none" href="#">Оформить</a>
+                    <p class="fsz11 txt-center txt-low">
+                        Оплата в месяц. Бесплатный тариф предоставляет
+                        доступ ко всей коллекции музыки.
+                        Присутствует реклама
                     </p>
-                    <div class="releas-data-container display-flex f-content-sb f-align-center">
-                        <div>
-                            <img class="h25-19" src="images\avatar.png">
-                        </div>
-                        <div class="txt-up color-yellow">
-                            <p>Music&nbsp;box</p>
-                        </div>
-                        <span> | </span>
-                        <div class="text-grey">
-                            <p>24/02/2020</p>
-                        </div>
-                    </div>
-                    <a href="#" class="news-button txt-up txt-decor-none display-flex f-align-center">
-                        К альбому
-                    </a>
                 </div>
-                <div class="news-img-container">
-                    <img class="img-fit" src="images\Ordinary_Man.png" alt="Osborn album cover">
-                </div>
-            </article>
-        </section>
+            </li>
 
-        <section class="wrapper pt100 pb100">
-            <h2 class="fsz-20-29-38 txt-up txt-center mb50">
-                Мобильное приложение
-            </h2>
-            <div class="display-flex f-align-center mobile-application-container">
-                <div class="mobile-application-text-container">
-                    <p>Воспользуйтесь нашим мобильным приложением.
-                        Оно позволит слушать музыку с любого устройства
-                        на базе операционных систем Androind и iOS
+            <li class="card-container mb50 display-flex f-direction-column f-align-center bg-standart">
+                <p class="fsz-16-24">Стандартная</p>
+                <div class="display-flex f-align-center f-direction-column f-content-sb subsribe-description-holster">
+                    <p class="fsz60 p-m-0">250
+                        <sup class="fsz30">руб.</sup>
                     </p>
-                    <p>
-                        С тарифом «Премиум» приложение позволяет скачивать
-                        все композиции из нашей коллекции.
-                        Вы можете слушать музыку даже без интернета.
+                    <a class="subscribe-btn fsz-12-24 txt-up txt-center txt-decor-none" href="#">Оформить</a>
+                    <p class="fsz11 txt-center txt-low">
+                        Оплата в месяц. Стандартный тариф предоставляет
+                        доступ ко всей коллекции музыки в среднем качестве
                     </p>
-                    <button class="mobile-application-button">Скачать</button>
                 </div>
+            </li>
 
-                <div class="m-auto">
-                    <img class="img-fit" src="images\iphone.png" alt="mobile phones photo">
+            <li class="card-container mb50 display-flex f-direction-column f-align-center bg-premium">
+                <p class="fsz-16-24">Премиум</p>
+                <div class="display-flex f-direction-column f-align-center f-content-sb subsribe-description-holster">
+                    <p class="fsz60 p-m-0">500
+                        <sup class="fsz30">руб.</sup>
+                    </p>
+                    <a class="subscribe-btn fsz-12-24 txt-up txt-center txt-decor-none" href="#">Оформить</a>
+                    <p class="fsz11 txt-center txt-low">
+                        Оплата в месяц. Премиум тариф предоставляет
+                        доступ ко всей коллекции музыки в высоком качестве
+                    </p>
                 </div>
+            </li>
+        </ul>
+
+        <p class="fsz-12-22 txt-center">
+            На всех тарифах возможно прослушивание музыки
+            с мобильных устройств. На премиум тарифе
+            вы можете скачать все композиции на ваше устройство
+            и слушать музыку без подключения к интернету
+        </p>
+
+    </section>
+
+    <section class="wrapper mt100">
+        <h2 class="fsz-20-29-38 txt-up txt-center mb50">
+            Последние новости
+        </h2>
+
+        <article class="display-flex justify-content-between news-aricle-container">
+
+            <div>
+                <img class="img-fit" src="images/Music_to_Be_Murdered_By.png" alt="Eminem album cover photo">
             </div>
-        </section>
+
+            <div class="news-txt-container display-flex f-direction-column">
+                <h2 class="fsz30">Music to Be Murdered By</h2>
+                <p class="fsz14 text-color-secondary lh200">
+                    Новый альбом Eminem «Music&nbsp;to&nbsp;Be Murdered&nbsp;By»
+                    уже доступен в нашем сервисе.
+                    На альбоме вас ждёт 20 новых треков.
+                </p>
+                <div class="releas-data-container display-flex justify-content-between f-align-center">
+                    <div>
+                        <img class="h-mob25-desk19" src="images\avatar.png" height="19">
+                    </div>
+                    <div class="txt-up color-yellow">
+                        <p>Music&nbsp;box</p>
+                    </div>
+                    <span> | </span>
+                    <div class="text-grey">
+                        <p>17/01/2020</p>
+                    </div>
+                </div>
+                <a href="#" class="news-button txt-up txt-decor-none display-flex f-align-center">
+                    К альбому
+                </a>
+            </div>
+        </article>
+
+        <article class="display-flex justify-content-between news-aricle-container osborn-order">
+
+            <div class="news-txt-container display-flex f-direction-column">
+                <h2 class="fsz30">Ordinary&nbsp;Man</h2>
+                <p class="fsz14 text-color-secondary lh200">
+                    Легенда рока Оззи Озборн спустя 10 лет выпустил
+                    новый альбом Ordinary Man.
+                    Слушайте в числе первых на Music Box
+                </p>
+                <div class="releas-data-container display-flex justify-content-between f-align-center">
+                    <div>
+                        <img class="h-mob25-desk19" src="images\avatar.png">
+                    </div>
+                    <div class="txt-up color-yellow">
+                        <p>Music&nbsp;box</p>
+                    </div>
+                    <span> | </span>
+                    <div class="text-grey">
+                        <p>24/02/2020</p>
+                    </div>
+                </div>
+                <a href="#" class="news-button txt-up txt-decor-none display-flex f-align-center">
+                    К альбому
+                </a>
+            </div>
+            <div class="news-img-container">
+                <img class="img-fit" src="images\Ordinary_Man.png" alt="Osborn album cover">
+            </div>
+        </article>
+    </section>
+
+    <section class="wrapper mt100">
+        <h2 class="fsz-20-29-38 txt-up txt-center mb50">
+            Мобильное приложение
+        </h2>
+        <div class="display-flex f-align-center mobile-application-container">
+            <div class="mobile-application-text-container">
+                <p>Воспользуйтесь нашим мобильным приложением.
+                    Оно позволит слушать музыку с любого устройства
+                    на базе операционных систем Androind и iOS
+                </p>
+                <p>
+                    С тарифом «Премиум» приложение позволяет скачивать
+                    все композиции из нашей коллекции.
+                    Вы можете слушать музыку даже без интернета.
+                </p>
+                <button class="mobile-application-button">Скачать</button>
+            </div>
+
+            <div class="m-auto">
+                <img class="img-fit" src="images\iphone.png" alt="mobile phones photo">
+            </div>
+        </div>
+    </section>
 
     </main>
 
-    <footer>
-        <div class="wrapper pt80  mb100">
-            <div class="footer-container display-flex f-content-sb">
+    <footer class="bg-gradient">
+        <div class="wrapper mt100 pt80">
+            <div class="footer-container display-flex justify-content-between">
                 <ul class="footer-blocks-styles list-style-none">
                     <li>
                         <a class="footer-link-styles txt-decor-none fsz16" href="#">
@@ -320,7 +316,7 @@
                     <li class="footer-link-styles txt-decor-none fsz16">
                         Подписывайтесь
                     </li>
-                    <div class="social-container display-flex f-content-sb">
+                    <div class="social-container display-flex justify-content-between">
                         <li>
                             <a href="#">
                                 <img src="images\Google+.png" height="16">
@@ -348,8 +344,8 @@
 
         <div class="footer-white-line-styles"></div>
 
-        <div class="wrapper pt50 pb50">
-            <ul class="footer-navigation-container display-flex f-content-sb list-style-none lh20">
+        <div class="wrapper mt50 pb50">
+            <ul class="footer-navigation-container display-flex justify-content-between list-style-none lh20">
                 <li>
                     <a href="#" class="footer-link-styles txt-decor-none fsz16">
                         Магазин
